syntax = "proto3";

package inscriptions.types.v1;

import "google/protobuf/timestamp.proto";

message Operations {
  repeated OperationEvent operations = 1;
}

message OperationEvent {
  Transaction transaction = 1;
  oneof operation {
    DeployOp deploy = 2;
    MintOp mint = 3;
    TransferOp transfer = 4;
  };
}

message Transactions {
  repeated Transaction transactions = 1;
}

message Transaction {
  string hash = 1;
  uint32 index = 2;
  string from = 3;
  string to = 4;
  string value = 5;
  uint64 nonce = 6;
  string input = 7;
  string data = 8;
  string mime_type = 9;
}

message TransferOp {
  string p = 1;
  string tick = 2;
  string op = 3; // transfer
  int64 amt = 4;
}

message MintOp {
  string p = 1;
  string tick = 2;
  string op = 3; // mint
  int64 amt = 4;
}

message DeployOp {
  string p = 1;
  string tick = 2;
  string op = 3; // deploy
  int64 max = 4;
  int64 lim = 5;
}